--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: home
-title: Blog of Kiwoong
-description: "Kiwoong(newhiwoong)의 기술 블로그"
-headline: Blog of Kiwoong
+title: Lsh58 Blog
+description: "Lsh58 Blog"
+headline: Lsh58 Blog
 tags: [Technology, Deep learning, Github, DNN, engineering, blog, Community detection, Sequence model, Generic model, Paper review]
 ---
 
