--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 title: Lsh58 Blog
 description: "Lsh58 Blog"
 headline: Lsh58 Blog
-tags: [Technology, Deep learning, Github, DNN, engineering, blog, Community detection, Sequence model, Generic model, Paper review]
+tags: [Blog, HTML, CSS, JS, Lecture]
 ---
 
 {% if site.paginate %} {% for post in paginator.posts %}
