--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 title: Lsh58 Blog
-description: "Lsh58 Blog"
+description: "Front-end study"
 headline: Lsh58 Blog
 tags: [Blog, HTML, CSS, JS, Lecture]
 ---
