--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title: Lsh58 Blog
+title: Home
 description: "Front-end study"
 headline: Lsh58 Blog
 tags: [Blog, HTML, CSS, JS, Lecture]
